--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,11 @@
     align-items: center;
     gap: 10px;
 }
-
+#exam_top .test_info div div {
+    font-size: 18px;
+    width: 120px;
+    height: 30px;
+}
 #exam_top .test_info {
     display: flex;
     align-items: center;
@@ -334,6 +338,12 @@ select {
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 0;
 }
+
+#exam_pop img,
+#denied_pop img {
+    max-width: 500px;
+    padding-left: 10px;
+}
 #exam_pop .pop_wrapper {
     position: fixed;
     left: 50%;
@@ -382,6 +392,13 @@ select {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    position: relative;
+}
+/* #exam_pop .pop_wrapper #group_content > div > div {
+    position: relative;
+} */
+#exam_pop .pop_wrapper > div > div {
+    position: relative;
 }
 
 #exam_pop .pop_wrapper > div h2 {
@@ -395,6 +412,7 @@ select {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    position: relative;
 }
 
 #exam_pop .pop_wrapper .question,
@@ -404,6 +422,20 @@ select {
     font-size: 18px;
     padding: 10px 0;
     white-space: pre-line;
+}
+
+#exam_pop .pop_wrapper .denied {
+    background-color: rgba(121, 16, 16, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: #fff;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .MathJax nobr {
@@ -427,6 +459,9 @@ select {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 0;
+}
+#check_pop img {
+    max-width: 300px;
 }
 #check_pop .pop_wrapper {
     position: fixed;
@@ -471,6 +506,7 @@ select {
     font-size: 60px;
     cursor: pointer;
 }
+
 #check_pop .pop_wrapper > div {
     padding: 20px 30px 20px 100px;
     display: flex;
@@ -489,6 +525,14 @@ select {
     font-size: 18px;
     display: none;
 }
+
+#check_pop .pop_wrapper .last_comment {
+    color: red;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
 #check_pop .pop_wrapper .check_blk {
     padding: 20px 0;
 }
@@ -803,8 +847,8 @@ select {
 }
 .confirm_blk .wrapper {
     position: absolute;
-    width: 400px;
-    height: 200px;
+    width: 500px;
+    height: auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
